--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <div class="qr-card">
     <div class="qr-img"><img src="images/image-qr-code.png"></div>
-    <div class="card-header">Improve your front-end skills by building projects</div>
-    <div class="card-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
+    <div class="card-header"><h1>Improve your front-end skills by building projects</h1></div>
+    <div class="card-text"><p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></div>
   </div>
   
 </body>
