--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="" href="images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Frontend Mentor Challenge - QR Code Component</title>
 </head>
 <body>
 
-  <div class="qr-card">
-    <div class="qr-img"><img src="images/image-qr-code.png"></div>
-    <div class="card-header"><h1>Improve your front-end skills by building projects</h1></div>
-    <div class="card-text"><p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></div>
-  </div>
+    <div class="qr-card">
+      <div class="qr-img"><img src="images/image-qr-code.png"></div>
+      <div class="card-header"><h1>Improve your front-end skills by building projects</h1></div>
+      <div class="card-text"><p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></div>
+    </div>
   
 </body>
 </html>
