--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" href="images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
 
     <div class="qr-card">
-      <div class="qr-img"><img src="images/image-qr-code.png"></div>
+      <div class="qr-img"><img src="images/image-qr-code.png" alt="qr code to frontend mentor website"></div>
       <div class="card-header"><h1>Improve your front-end skills by building projects</h1></div>
       <div class="card-text"><p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></div>
     </div>
